--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mongo_backed_rest_api",
+  "name": "United States Angular CRUD",
   "version": "0.1.0",
-  "description": "Mongo Backed REST API ========================== To complete this assignment:   * fork this repository (the sub module for this specific assignment)   * clone down your fork   * place all of your work in a folder that is your full name, use `_`s instead of spaces   * push back up to your fork   * create a pull request back to the original repo   * submit a link to the PR in canvas",
+  "description": "Enter your favorite states and cities!",
   "main": "server.js",
   "directories": {
     "test": "test"
@@ -12,18 +12,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/patci/mongo_backed_rest_api.git"
+    "url": "git+https://github.com/patci/united_states_angular.git"
   },
-  "author": "patci",
+  "author": "rpatci@gmail.com",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/patci/mongo_backed_rest_api/issues"
+    "url": "https://github.com/patci/united_states_angular/issues"
   },
-  "homepage": "https://github.com/patci/mongo_backed_rest_api#readme",
+  "homepage": "https://github.com/patci/united_states_angular#readme",
   "dependencies": {
-    "bcrypt": "latest",
     "body-parser": "^1.14.1",
-    "eat": "^0.1.1",
     "express": "^4.13.3",
     "mongoose": "^4.2.5"
   },
@@ -33,6 +31,6 @@
     "chai-http": "^1.0.0",
     "gulp": "^3.9.0",
     "mocha": "^2.3.3",
-    "webpack-stream": "^2.1.1"
+    "webpack-stream": "^2.2.0"
   }
 }
