--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp": "^3.9.0",
     "gulp-concat-css": "^2.2.0",
     "gulp-minify-css": "^1.2.2",
+    "gulp-sass": "^2.1.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
