--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-concat-css": "^2.2.0",
     "gulp-minify-css": "^1.2.2",
     "gulp-sass": "^2.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-watch": "^4.3.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
